@@ -1,5 +1,10 @@
 2001-10-25  Alex Graveley  <alex@ximian.com>
 
+	* src/libsoup/soup-message.c (redirect_handler): Handle redirects
+	when source uri has auth data by copying auth to new url.
+
+2001-10-25  Alex Graveley  <alex@ximian.com>
+
 	* src/libsoup/soup-queue.c (soup_queue_read_headers_cb): Fixe bug
 	where informational responses were treated as an unknown encoding,
 	causing the actual response to be considered part of the
